syntax = "proto3";

option go_package = "t-lunch-backend/pkg/api/generated;tlunch";

package tlunch;

import "google/annotations.proto";
import "google/timestamp.proto";

service Tlunch {
    // TODO: registration
    // TODO: authorization
    // TODO: authentication

    rpc GetProfile (UserRequest) returns (User) {
        option (google.api.http) = {
            get: "/v1/profile/{user_id}"
        };
    }

    rpc ChangeProfile (User) returns (User) {
        option (google.api.http) = {
            patch: "/v1/profile/{user_id}"
            body: "*"
        };
    }

    rpc GetLunches (UserRequest) returns (GetLunchesResponse) {
        option (google.api.http) = {
            get: "/v1/lunches"
        };
    }

    rpc CreateLunch (CreateLunchRequest) returns (LunchResponse) {
        option (google.api.http) = {
            post: "/v1/lunch"
            body: "*"
        };
    }

    rpc JoinLunch (ActionLunchRequest) returns (LunchResponse) {
        option (google.api.http) = {
            patch: "/v1/lunch/{lunch_id}/join"
            body: "*"
        };
    }

    rpc LeaveLunch (ActionLunchRequest) returns (LunchResponse) {
        option (google.api.http) = {
            patch: "/v1/lunch/{lunch_id}/leave"
            body: "*"
        };
    }

    rpc GetDetailLunch (DetailLunchRequest) returns (LunchResponse) {
        option (google.api.http) = {
            get: "/v1/lunch/{lunch_id}"
        };
    }

    rpc GetLunchHistory (UserRequest) returns (LunchHistoryResponse) {
        option (google.api.http) = {
            get: "/v1/lunch/{user_id}/history"
        };
    }

    rpc RateLunch (RateLunchRequest) returns (LunchFeedback) {
        option (google.api.http) = {
            patch: "/v1/lunch/{user_id}/history/{lunch_id}"
            body: "*"
        };
    }
}

message User {
    int64 id = 1;
    string name = 2;
    string surname = 3;
    string tg = 4;
    string office = 5;
    string emoji = 6;
}

message Lunch {
    int64 id = 1;
    string name = 2;
    string surname = 3;
    string place = 4;
    google.protobuf.Timestamp time = 5;
    int64 number_of_participants = 6;
    optional string information = 7;
    oneof users_oneof {
        repeated User users = 8;
    }
}

message LunchFeedback {
    Lunch lunch = 1;
    bool liked = 2;
}

message UserRequest {
    int64 user_id = 1;
}

message GetLunchesResponse {
    repeated Lunch lunches = 1;
    optional int64 lunch_id = 2;
}

message CreateLunchRequest {
    int64 user_id = 1;
    string place = 2;
    google.protobuf.Timestamp time = 3;
    string information = 4;
}

message LunchResponse {
    Lunch lunch = 1;
}

message ActionLunchRequest {
    int64 lunch_id = 1;
    int64 user_id = 2;
}

message DetailLunchRequest {
    int64 lunch_id = 1;
}

message LunchHistoryResponse {
    repeated LunchFeedback lunches = 1;
}

message RateLunchRequest {
    int64 user_id = 1;
    int64 lunch_id = 2;
    bool liked = 3;
}
